# lofar

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestCustom.cmake.in  INSTALL  README  lofar_config.h.cmake  lofarinit.csh.in  lofarinit.sh.in
CEP/Calibration/pystationresponse/: CMakeLists.txt
CEP/DP3/DPPP/: CMakeLists.txt
CEP/LAPS/: CMakeLists.txt
CEP/LAPS/DBToQDeamon/: CMakeLists.txt
CEP/LAPS/GRIDInterface/: CMakeLists.txt
CEP/LAPS/Messaging/: CMakeLists.txt
CEP/LAPS/ParsetCombiner/: CMakeLists.txt
CEP/LAPS/QToPipeline/: CMakeLists.txt
CEP/LAPS/test/: CMakeLists.txt
CEP/LMWCommon/: CMakeLists.txt
CEP/LMWCommon/share/: CMakeLists.txt
CEP/LMWCommon/src/: CMakeLists.txt  ClusterDesc.cc  Controller.cc  ControllerBase.cc  DomainShape.cc  MPIConnection.cc  MPIConnectionSet.cc  MWBlobIO.cc  MWConnection.cc  MWConnectionSet.cc  MWGlobalStep.cc  MWIos.cc  MWLocalStep.cc  MWMultiStep.cc  MWStep.cc  MWStepFactory.cc  MWStepVisitor.cc  MasterControl.cc  MemConnection.cc  MemConnectionSet.cc  NodeDesc.cc  ObsDomain.cc  ParameterHandler.cc  SocketConnection.cc  SocketConnectionSet.cc  SocketListener.cc  VdsDesc.cc  VdsPartDesc.cc  WorkDomainSpec.cc  WorkerControl.cc  WorkerFactory.cc  WorkerInfo.cc  WorkerProxy.cc  WorkersDesc.cc  expandparameter  finddproc.cc  showclusterdesc.cc
CEP/LMWCommon/test/: CMakeLists.txt  tClusterDesc.cc  tNodeDesc.cc  tSocketConnection.cc  tSocketConnectionSet.cc  tVdsDesc.cc  tVdsPartDesc.cc  tWorkersDesc.cc  tstartdproc.cc  tstartdproc.run
CEP/PyBDSM/: CMakeLists.txt  __init__.py
CEP/PyBDSM/src/: CMakeLists.txt
CEP/PyBDSM/test/: CMakeLists.txt  setpythonpath.run_tmpl  tbdsm_import.run  tbdsm_process_image.run
LCS/MessageBus/: CMakeLists.txt
LCS/MessageBus/src/: CMakeLists.txt  FromBus.cc  LogSink.h  Message.cc  NoQpidFallback.cc  ToBus.cc  Util.cc  Util.h  XMLDoc.cc  environment.py  message.py  messagebus.py  noqpidfallback.py
LCS/MessageBus/test/: CMakeLists.txt  MessageFuncs.sh.in  tProtocols.cc  tPyMsgBus.py  tPyMsgBus.run  tPyProtocols.py  tPyProtocols.run  tXMLDoc.cc
LCS/PyCommon/: CMakeLists.txt  cep4_utils.py  datetimeutils.py  dbcredentials  dbcredentials.py  defaultmailaddresses.py  flask_utils.py  h5_utils.py  lcu_utils.py  math.py  methodtrigger.py  postgres.py  ssh_utils.py  subprocess.py  subprocess_utils.py  test_utils.py  threading_utils.py  util.py  xmlparse.py
LCS/PyCommon/test/: CMakeLists.txt  postgres.py  python-coverage.sh  t_cache.py  t_cache.sh  t_cep4_utils.py  t_cep4_utils.run  t_cep4_utils.sh  t_dbcredentials.py  t_defaultmailaddresses.py  t_defaultmailaddresses.sh  t_postgres.py  t_postgres.run  t_postgres.sh  t_test_utils.py  t_test_utils.run  t_test_utils.sh  t_util.py  t_util.run  t_util.sh
LCS/WinCCWrapper/: CMakeLists.txt
LCS/WinCCWrapper/doc/: package.dox  winccwrapper.md
LCS/WinCCWrapper/include/: CMakeLists.txt  WinCCManager.h  WinCCResources.h  WinCCWrapper.h  exceptions.h
LCS/WinCCWrapper/src/: CMakeLists.txt  ConnectWaitForAnswer.cc  ConnectWaitForAnswer.h  WinCCManager.cc  WinCCResources.cc  WinCCWrapper.cc  WinCCWrapper_boost_python.cc  exceptions.h
LCS/WinCCWrapper/test/: CMakeLists.txt  WinCCGet.cc  WinCCQuery.cc  WinCCSet.cc  mock.py
LCU/checkhardware/: CMakeLists.txt  check_hardware.py  do_station_test.sh  rtsm.py  show_bad_spectra.py  show_test_result.py  update_pvss.py
LCU/checkhardware/checkhardware_lib/: CMakeLists.txt  __init__.py  data.py  db.py  general.py  hardware_tests.py  hba.py  lba.py  lofar.py  reporting.py  rsp.py  settings.py  spu.py  tbb.py
LCU/checkhardware/config/: CS001-check_hardware.conf  CS002-check_hardware.conf  CS003-check_hardware.conf  CS004-check_hardware.conf  CS005-check_hardware.conf  CS006-check_hardware.conf  CS007-check_hardware.conf  CS011-check_hardware.conf  CS013-check_hardware.conf  CS017-check_hardware.conf  CS021-check_hardware.conf  CS024-check_hardware.conf  CS026-check_hardware.conf  CS028-check_hardware.conf  CS030-check_hardware.conf  CS031-check_hardware.conf  CS032-check_hardware.conf  CS101-check_hardware.conf  CS103-check_hardware.conf  CS201-check_hardware.conf  CS301-check_hardware.conf  CS302-check_hardware.conf  CS401-check_hardware.conf  CS501-check_hardware.conf  DE601-check_hardware.conf  DE602-check_hardware.conf  DE603-check_hardware.conf  DE604-check_hardware.conf  DE605-check_hardware.conf  DE609-check_hardware.conf  FR606-check_hardware.conf  LV614-check_hardware.conf  PL610-check_hardware.conf  PL611-check_hardware.conf  PL612-check_hardware.conf  RS106-check_hardware.conf  RS205-check_hardware.conf  RS208-check_hardware.conf  RS210-check_hardware.conf  RS305-check_hardware.conf  (+11 more)
LCU/checkhardware/test/: CMakeLists.txt  t_check_hardware.py  t_check_hardware.run  t_check_hardware.sh  test-check_hardware.conf
LTA/ltastorageoverview/lib/: CMakeLists.txt  ingesteventhandler.py  report.py  scraper.py  store.py
LTA/sip/lib/: CMakeLists.txt  constants.py  constants_generator.py  feedback.py  ltasip.py  query.py  siplib.py  station_coordinates.conf  validator.py  visualizer.py
LTA/sip/test/: CMakeLists.txt  example.py  test_feedback.py  test_feedback.sh  test_siplib.py  test_siplib.sh  test_validator.py  test_validator.sh  test_visualizer.py  (+3 more)
SAS/: CMakeLists.txt
SAS/DataManagement/: CMakeLists.txt
SAS/MoM/: CMakeLists.txt
SAS/OTB/: pom.xml
SAS/OTDB_Services/: CMakeLists.txt  OTDBBusListener.py  TreeService.ini  TreeService.py  TreeStatusEvents.ini  TreeStatusEvents.py  config.py  getOTDBParset  otdbrpc.py  setCorrelatorHeadNode  setOTDBTreeStatus  treeService  treeStatusEvents
SAS/QPIDInfrastructure/: CMakeLists.txt  amqp-infra-setup.sh
SAS/ResourceAssignment/: CMakeLists.txt
SAS/Scheduler/: CMakeLists.txt
SAS/SpecificationServices/: CMakeLists.txt
SAS/TBBAlertVOeventPublisher/: CMakeLists.txt
SAS/TriggerEmailService/: CMakeLists.txt
SAS/TriggerServices/: CMakeLists.txt
SAS/XSD/: CMakeLists.txt
SAS/doc/: package.dox
SubSystems/DataManagement/: CMakeLists.txt  DataManagement.ini
SubSystems/RAServices/: CMakeLists.txt  Jenkinsfile  RAServices.ini
(+3428 files in other folders)
