# $Id$

install(FILES
  config.ccu
  config.maincu
  config.standalone.station
  config.dist.station
  config.dist_test.station
  config.level.maincu
  config.level.ccu
  config.level.station
  config.navigator.unix_3.10
  config.navigator.unix_3.14
  config.navigator.windows_3.10
  config.navigator.windows_3.14
  progs.ccu
  progs.maincu
  progs_wincc.snmp
  progs_pvss.snmp
  progs.standalone.station
  progs.dist.station
  progs_wincc.ccu
  progs_wincc.maincu
  progs_wincc.standalone.station
  progs_wincc.dist.station
  DESTINATION pvss/config)


